Updated Gradle settings

--- a/gradle-example/build.gradle
+++ b/gradle-example/build.gradle
@@ -86,8 +86,7 @@ configurations {
 
 
 artifactory {
-  //contextUrl = 'http://repo.jfrog.org/artifactory'
-  contextUrl = 'http://repo-demo:8080/artifactory'
+  contextUrl = 'http://localhost:8080/artifactory'
   publish {
     repository {
       repoKey = 'gradle-snapshot-local' //The Artifactory repository key to publish to
@@ -119,7 +118,7 @@ artifactory {
 }
 
 task wrapper(type: Wrapper) {
-  gradleVersion = '1.0-milestone-8'
+  gradleVersion = '1.6'
 }
 
 class Version {
