--- a/gradle-example/build.gradle
+++ b/gradle-example/build.gradle
@@ -12,11 +12,7 @@
 buildscript {
   repositories {
     maven {
-      url "http://localhost:8080/artifactory/gradle"
-      credentials {
-        username = "${artifactory_user}"
-        password = "${artifactory_password}"
-      }
+      url "http://repo.jfrog.org/artifactory/libs-releases"
     }
 
     dependencies {
