--- a/maven-example/multi1/pom.xml
+++ b/maven-example/multi1/pom.xml
@@ -54,6 +54,16 @@
             <version>1.1</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>asm</groupId>
+			<artifactId>asm</artifactId>
+			<version>3.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>antlr</groupId>
+			<artifactId>antlr</artifactId>
+			<version>2.7.2</version>
+		</dependency>
         <dependency>
             <groupId>org.codehaus.plexus</groupId>
             <artifactId>plexus-utils</artifactId>
