--- a/gradle-example/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle-example/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sun Sep 18 12:41:22 IDT 2011
+#Tue Mar 04 21:33:32 IST 2014
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://services.gradle.org/distributions/gradle-1.6-bin.zip
+distributionUrl=http\://services.gradle.org/distributions/gradle-1.11-bin.zip
